# genai-prices

./: .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  Makefile  PLAN.md  README.md  RELEASE.md  data_format.yml  package-lock.json  package.json  pyproject.toml  schema.json  schema.py  uprev.sh
.changeset/: auto-1753276956.md  bright-walls-slide.md  chatty-brooms-arrive.md  config.json  easy-waves-love.md  initial-release.md  late-cows-type.md  pre.json  pretty-years-count.md  sour-kiwis-float.md
.claude/agents/: genai-downstream-observability-reviewer.md  genai-model-lookup-contract-reviewer.md  genai-openrouter-sync-reviewer.md  genai-price-provenance-reviewer.md
.claude/skills/add-price-model/: SKILL.md
.github/aw/: actions-lock.json
.github/copilot/: actions-setup-steps.yml
.github/scripts/: check_version_not_downgraded.py
.github/workflows/: AGENTIC_PRICE_CHECK.md  after-ci.yml  agentic-price-check-google-mistral.lock.yml  agentic-price-check-google-mistral.md  agentic-price-check-openai-anthropic.lock.yml  agentic-price-check-openai-anthropic.md  agentics-maintenance.yml  beta-release.yml  ci.yml  release.yml  test-release.yml  update-model-metadata.yml
benchmarks/: README.md
benchmarks/javascript/: pricing.ts  tsconfig.json
benchmarks/python/: pricing.py
conversations/: 2026-04-22-unit-registry-simplification.md
data/: README.md  main.py  prices.json  pyproject.toml  schema.json
data/providers/: anthropic.yml  avian.yml  aws.yml  azure.yml  cohere.yml  deepseek.yml  fireworks.yml  google.yml  groq.yml  mistral.yml  novita.yml  openai.yml  openrouter.yml  perplexity.yml  together.yml  x.yml
data/src/: build.py
docs/adr/: 0001-singleton-background-updater.md
prices/: README.md  data.json  data.schema.json  data_schema.json  data_slim.json  data_slim.schema.json  data_v2.json  data_v2.schema.json  prompts.md  pyproject.toml  schema.json  units.schema.json  units.yml
prices/helicone_get/: .gitignore  README.md  clone.sh  main.ts  pull.sh
prices/providers/: .schema.json  anthropic.yml  avian.yml  aws.yml  azure.yml  cerebras.yml  cohere.yml  deepseek.yml  doubleword.yml  fireworks.yml  google.yml  groq.yml  huggingface.yml  huggingface_cerebras.yml  huggingface_fireworks-ai.yml  huggingface_groq.yml  huggingface_hyperbolic.yml  huggingface_nebius.yml  huggingface_novita.yml  huggingface_nscale.yml  huggingface_ovhcloud.yml  huggingface_publicai.yml  huggingface_sambanova.yml  huggingface_together.yml  minimax.yml  mistral.yml  moonshotai.yml  novita.yml  openai.yml  openrouter.yml  ovhcloud.yml  perplexity.yml  together.yml  voyageai.yml  x.yml  x_ai.yml  zhipuai.yml
prices/src/prices/: __main__.py  auto_update.py  build.py  collapse.py  detect_deprecated.py  export_validation.py  inject_providers.py  package_data.py  price_discrepancies.py  prices_types.py  simplify.py  source_ai.py  source_aws.py  source_huggingface.py  source_litellm.py  source_models_dev.py  source_openrouter.py  source_ovhcloud.py  source_prices.py  source_simonw_prices.py  types.py  update.py  update_litellm.py  update_openrouter.py  utils.py
scrape/: .gitignore
scrape/helicone/: .gitignore  deno.json  main.ts
scripts/: auto-update.sh  publish.js  publish.sh  release.py
specs/: 2026-03-23-token-unit-registry-plan.md  2026-03-23-unit-registry-reference.md  2026-03-23-unit-registry-spec.md
specs/data-driven-unit-registry/: algorithm.md  code-spec.md  colleague-feedback-deck.html  colleague-feedback-deck.md  colleague-feedback-deck.pptx  examples.md  implementation-flow.md  spec.md
specs/data-driven-unit-registry/phase-1-python-internal-registry/: code-spec.md  spec.md
specs/data-driven-unit-registry/phase-1-static-unit-registry-release/: code-spec.md  spec.md
specs/data-driven-unit-registry/phase-2-auto-updating-units/: code-spec.md  spec.md
specs/data-driven-unit-registry/phase-2-javascript-internal-registry/: code-spec.md  spec.md
specs/data-driven-unit-registry/phase-2-runtime-custom-units/: code-spec.md  spec.md
specs/data-driven-unit-registry/phase-3-global-snapshot-enforcement/: code-spec.md  spec.md
specs/data-driven-unit-registry/phase-3-shared-data-contract/: code-spec.md  spec.md
specs/data-driven-unit-registry/phase-4-polish-compat-hardening/: code-spec.md  spec.md
specs/data-driven-unit-registry/phase-5-runtime-validation-performance/: code-spec.md  spec.md
specs/data-driven-unit-registry/phase-6-runtime-custom-units/: code-spec.md  spec.md
specs/data-driven-unit-registry/phase-7-global-snapshot-enforcement/: code-spec.md  spec.md
specs/data-driven-unit-registry/phase-8-usage-inference/: code-spec.md  spec.md
tests/: cli_missing_dependency_import.py  conftest.py  test_auto_update.py  test_cli.py  test_conditional_prices.py  test_custom_prices.py  test_decompose.py  test_end_to_end.py  test_extract_usage.py  test_google_extractors.py  test_lifecycle.py  test_model_matching.py  test_model_metadata.py  test_package_schema.py  test_price_calc.py  test_price_regressions.py  test_provider_array_integration.py  test_provider_matching.py  test_provider_prices.py  test_public_exports.py  test_source_litellm.py  test_source_models_dev.py  test_source_openrouter.py  test_source_prices_types.py  test_tiered_pricing.py  test_units.py  test_update_prices.py  test_usage.py  test_validation.py  test_wrapped_payload_integration.py  unit_registry_helpers.py
tests/cassettes/test_auto_update/: default.yaml  fail.yaml
tests/cassettes/test_update_prices/: fail.yaml  success.yaml
tests/dataset/: .gitignore  README.md  extract_usages.py  get_raw_bodies.py  usages.json  utils.py
