[project]
name = "llm-pricing"
version = "0.1.0"
description = "Database of prices for calling LLM models."
readme = "README.md"
requires-python = ">=3.9"
# Do not publish this package to PyPI
classifiers = ["Private :: do not release"]
dependencies = []

[dependency-groups]
dev = ["devtools>=0.12.2", "pyright>=1.1.402", "ruff>=0.12.0"]

[tool.uv.workspace]
members = ["data"]

[tool.ruff]
line-length = 120
target-version = "py39"
include = ["data/**/*.py"]

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "UP", "I"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true }
mccabe = { max-complexity = 15 }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# don't format python in docstrings, pytest-examples takes care of it
docstring-code-format = false
quote-style = "single"

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
include = ["data"]
venv = ".venv"

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = "data/prices.json"
