[project]
name = "genai-prices-root"
version = "0"
description = "Database of prices for calling LLM models."
readme = "README.md"
authors = [{ name = "Samuel Colvin", email = "samuel@pydantic.dev" }]
requires-python = ">=3.9"
# Do not publish this package to PyPI
classifiers = ["Private :: do not release"]
dependencies = []

[dependency-groups]
dev = [
    "coverage[toml]>=7.9.2",
    "devtools>=0.12.2",
    "dirty-equals>=0.9.0",
    "inline-snapshot[black]>=0.23.2",
    "ipython>=8.18.1",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "pytest-pretty>=1.3.0",
    "pytest-recording>=0.13.4",
    "ruff>=0.12.0",
]

[tool.uv.workspace]
members = ["prices", "packages/python"]

[tool.ruff]
line-length = 120
target-version = "py39"
include = ["prices/src/**/*.py"]

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "UP", "I"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true, known-first-party = ["genai_prices"] }
mccabe = { max-complexity = 18 }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# don't format python in docstrings, pytest-examples takes care of it
docstring-code-format = false
quote-style = "single"

[tool.pytest.ini_options]
testpaths = "tests"
xfail_strict = true

# https://coverage.readthedocs.io/en/latest/config.html#run
[tool.coverage.run]
include = [
    # "prices/src/prices/**/*.py",
    "packages/python/**/*.py",
    "tests/**/*.py",
]
branch = true

# https://coverage.readthedocs.io/en/latest/config.html#report
[tool.coverage.report]
skip_covered = true
show_missing = true
ignore_errors = true
precision = 2
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    'if typing.TYPE_CHECKING:',
    '@overload',
    '@deprecated',
    '@typing.overload',
    '@abstractmethod',
    '\(Protocol\):$',
    'typing.assert_never',
    '$\s*assert_never\(',
    'if __name__ == .__main__.:',
    '$\s*pass$',
]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
include = ["prices/src", "packages/python", "tests"]
venv = ".venv"
executionEnvironments = [{ root = "tests", reportPrivateUsage = false }]


[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = "prices/data.json"
