[project]
name = "genai-prices-root"
version = "0"
description = "Database of prices for calling LLM models."
readme = "README.md"
authors = [{ name = "Samuel Colvin", email = "samuel@pydantic.dev" }]
requires-python = ">=3.9"
# Do not publish this package to PyPI
classifiers = ["Private :: do not release"]
dependencies = []

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "basedpyright>=1.30.1",
    "coverage[toml]>=7.9.2",
    "devtools>=0.12.2",
    "dirty-equals>=0.9.0",
    "inline-snapshot[black]>=0.23.2",
    "ipython>=8.18.1",
    "pytest>=8.4.1",
    "pytest-pretty>=1.3.0",
    "pytest-recording>=0.13.4",
    "pydantic-settings>=2.11",
    "rich>=14.3.2",
    "rich-argparse>=1.7.2",
    "ruff>=0.12.3",
    "boto3-stubs[bedrock,pricing]>=1.40.75",
    "boto3>=1.40.75",
]

[tool.uv.workspace]
members = ["prices", "packages/python"]

[tool.ruff]
line-length = 120
target-version = "py39"
include = ["prices/src/**/*.py", "packages/python/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "UP", "I"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true, known-first-party = ["genai_prices"] }
mccabe = { max-complexity = 18 }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"packages/python/genai_prices/data.py" = ["F405", "F403"]

[tool.ruff.format]
# don't format python in docstrings, pytest-examples takes care of it
docstring-code-format = false
quote-style = "single"

[tool.pytest.ini_options]
testpaths = "tests"
xfail_strict = true
filterwarnings = ["error"]
markers = [
    "requires_latest_pydantic: marks tests that require Pydantic >2.10 for schema generation",
]

# https://coverage.readthedocs.io/en/latest/config.html#run
[tool.coverage.run]
include = [
    # "prices/src/prices/**/*.py",
    "packages/python/**/*.py",
    "tests/**/*.py",
]
branch = true

# https://coverage.readthedocs.io/en/latest/config.html#report
[tool.coverage.report]
skip_covered = true
show_missing = true
ignore_errors = true
precision = 2
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    'if typing.TYPE_CHECKING:',
    '@overload',
    '@deprecated',
    '@typing.overload',
    '@abstractmethod',
    '\(Protocol\):$',
    'typing.assert_never',
    '$\s*assert_never\(',
    'if __name__ == .__main__.:',
    '$\s*pass$',
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
reportIgnoreCommentWithoutRule = true
reportUnusedParameter = true
reportIncompatibleUnannotatedOverride = true
reportImplicitAbstractClass = true
include = ["prices/src", "packages/python", "tests"]
venv = ".venv"
executionEnvironments = [{ root = "tests", reportPrivateUsage = false }]

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = "prices/data.json,package-lock.json"

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"
