[build-system]
requires = ["uv_build>=0.7.13,<0.8"]
build-backend = "uv_build"

[project]
name = "prices"
version = "0.0.0"
description = "raw data for genai-prices"
readme = "README.md"
# Do not publish this package to PyPI
classifiers = ["Private :: do not release"]
requires-python = ">=3.9"
dependencies = ["httpx>=0.28.1", "pydantic>=2.10", "ruamel-yaml>=0.18.14"]
